--- a/main_vacuum_chamber_development/platformio.ini
+++ b/main_vacuum_chamber_development/platformio.ini
@@ -12,3 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	adafruit/Adafruit BMP280 Library@^2.6.8
+	arduino-libraries/SD@^1.3.0
