--- a/main_vacuum_chamber_development/platformio.ini
+++ b/main_vacuum_chamber_development/platformio.ini
@@ -16,3 +16,7 @@ lib_deps =
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	adafruit/Adafruit BMP280 Library@^2.6.8
 	arduino-libraries/SD@^1.3.0
+	adafruit/Adafruit Unified Sensor@^1.1.14
+    adafruit/Adafruit BusIO@^1.16.1
+    SPI @ ^1.0
+    Wire @ ^1.0
